--- a/gocart/themes/oneTouch/assets/css/app.css
+++ b/gocart/themes/oneTouch/assets/css/app.css
@@ -150,7 +150,7 @@ h6, .section-block .subtitle, #page-title .subtitle, .widget .subtitle{
 
 a {
 
-    color: #57bae8;
+    color: white !important;
 
 }
 
@@ -562,9 +562,8 @@ a.back:hover {
 
     background: url("../images/icons/twitter_w@2x.png") 0 6px no-repeat;
 
-    background-size: 32px 32px;
-
--webkit-background-size: 32px 32px;
+  background-size: 40px 40px;
+-webkit-background-size: 40px 40px;
 
 }
 
@@ -2420,7 +2419,7 @@ div.item, .item div{
 
 #darkf {
 
-    background: #4e616d !important;
+    background: #363839 !important;
 
     color: #b8d2e3;
 	float:left;
@@ -2520,7 +2519,7 @@ div.item, .item div{
 
     font-size: 24px;
 
-    color: #1f9ed9;
+    color: white;
 
     margin: 0 0 35px 0;
 
@@ -2542,19 +2541,14 @@ div.item, .item div{
 
 .twitter-widget .tweet, .tweet_even, .tweet_odd {
 
-    padding-left: 80px;
+padding-left: 80px;
+background: url("../images/icons/twitt@2x.png") 8px 4px no-repeat;
+background-size: 40px 40px;
+-webkit-background-size: 40px 40px;
+line-height: 1.3;
+margin-bottom: 23px;
+min-height: 65px;
 
-    background: url("../images/icons/twitt@2x.png")  0 4px no-repeat;
-
-    background-size: 60px 60px;
-
-    -webkit-background-size: 60px 60px;
-
-    line-height: 1.3;
-
-    margin-bottom: 23px;
-
-    min-height: 65px;
 
 }
 
@@ -2594,11 +2588,11 @@ article time {
 
     width: 60px;
 
-    height:60px;
+    height:60px;   
 
     display: block;
 
-    background: #b5c2ca;
+    background: none !important;
 
     color: #fff;
 
