--- a/gocart/themes/oneTouch/assets/css/app.css
+++ b/gocart/themes/oneTouch/assets/css/app.css
@@ -288,21 +288,21 @@ a.back:hover {
 
 .wrap .item  .description {
 
-    background: rgba(87,186,232,.87) url("../images/icons/white-list@2x.png") 10px 10px no-repeat;
+    background: rgba(255, 255, 255, 0.6) url("../images/icons/slider-home-icon.png") 10px 10px no-repeat;
 
-    background-size: 32px 32px;
+    background-size: 27px 32px;
 
-    -webkit-background-size: 32px 32px;
+    -webkit-background-size: 27px 32px;
 
 }
 
 .wrap .item.even .description {
 
-    background: rgba(108,190,66,.87) url("../images/icons/white-list@2x.png") 10px 10px no-repeat;
+    background: rgba(255, 255, 255, 0.6) url("../images/icons/slider-home-icon.png") 10px 10px no-repeat;
 
-    background-size: 32px 32px;
+    background-size: 27px 32px;
 
-    -webkit-background-size: 32px 32px;
+    -webkit-background-size: 27px 32px;
 
 }
 
@@ -1993,7 +1993,7 @@ div.item, .item div{
 
     background: rgba(87,186,232,.87);
 
-    color: #fff;
+    color: #565759;
 
     -moz-transition: all .7s;
 
@@ -2141,7 +2141,9 @@ div.item, .item div{
 
 .item  .description h4 {
 
-    color: #fff;
+    color: #565759;
+	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-size:18px;
 
 }
 
@@ -2153,7 +2155,7 @@ div.item, .item div{
 
 .item .description time {
 
-    color: #a1eeff;
+    color: #565759;
 
     font-size: 10px;
 
@@ -2167,7 +2169,7 @@ div.item, .item div{
 
 .item.even .description time {
 
-    color: #cfffbc;
+    color: #565759;
 
 }
 
