--- a/gocart/themes/oneTouch/assets/css/app.css
+++ b/gocart/themes/oneTouch/assets/css/app.css
@@ -4288,7 +4288,7 @@ a.button:hover, button.button:hover, input.button:hover, #respond input#submit:h
 
     border: none;
 
-    background: #50A9D2;
+    background: #888888;
 
     color: white;
 
@@ -4526,7 +4526,7 @@ div.product .woocommerce_tabs ul.tabs li::before, div.product .woocommerce_tabs 
 
 div.product form.cart .button, #content div.product form.cart .button, a.button.checkout {
 
-    background: #6cbe42;
+    background: #888888;
 
 }
 
@@ -4540,7 +4540,7 @@ div.product form.cart .button, #content div.product form.cart .button, a.button.
 
 div.product form.cart .button:hover, #content div.product form.cart .button:hover, a.button.checkout:hover {
 
-    background: #5ca238;
+    background: #888888;
 
 }
 
@@ -4770,7 +4770,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 
     width: auto;
 
-    background: #57BAE8;
+    background: #888888;
 
     border: none;
 
