--- a/gocart/themes/oneTouch/assets/css/woocommerce.css
+++ b/gocart/themes/oneTouch/assets/css/woocommerce.css
@@ -126,7 +126,7 @@ div.product .product_title, #content div.product .product_title {
 	padding:0
 }
 div.product span.price, div.product p.price, #content div.product span.price, #content div.product p.price {
-	color:#1f9ed9;
+	color:#888888;
 	font-size:1.25em
 }
 div.product span.price ins, div.product p.price ins, #content div.product span.price ins, #content div.product p.price ins {
