--- a/gocart/themes/oneTouch/assets/css/app.css
+++ b/gocart/themes/oneTouch/assets/css/app.css
@@ -3630,7 +3630,7 @@ form textarea {
 
 form  label {
 
-    color: #9e9e9e;
+    color:#000;
 
     font-size: 11px;
 
@@ -4232,7 +4232,7 @@ a.button, button.button, input.button, #respond input#submit, #content input.but
 
     width: auto;
 
-    background: #57BAE8;
+    background:#9F9F9F;
 
     border: none;
 
@@ -4288,7 +4288,7 @@ a.button:hover, button.button:hover, input.button:hover, #respond input#submit:h
 
     border: none;
 
-    background: #50A9D2;
+    background: #9F9F9F;
 
     color: white;
 
@@ -4770,7 +4770,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 
     width: auto;
 
-    background: #57BAE8;
+    background: #9F9F9F;
 
     border: none;
 
@@ -5925,14 +5925,14 @@ p.readmore{ text-align: center;}
 {
 	
 	overflow:auto;
-	margin:0px; padding:0px;
+	margin:23px 0 0 0; padding:0px;
 }
 .cart_text
 {
 	
 	margin:4px; padding:0px;
 	float:right;
-	color:#464749;
+	color:#000;
 	font-family:Verdana, sans-serif;
 	font-size:12px;
 }
@@ -5955,7 +5955,7 @@ p.readmore{ text-align: center;}
 .main_menu
 {
 	
-	margin:25px 0 0 0; padding:0px;
+	margin:25px 15px 0 0; padding:0px;
 	float:right;
 
 }
@@ -6099,7 +6099,7 @@ p.readmore{ text-align: center;}
 	margin:0px; padding:0px;
 	float:left;
 	font-family:Verdana, Geneva, sans-serif;
-	color:#464749;
+	color:#000;
 	font-size:13px;
 	
 }
@@ -6107,7 +6107,7 @@ p.readmore{ text-align: center;}
 {
 	margin:0 15px 0 0; padding:0px;
 	float:left;
-	color:#464749;
+	color:#000;
 	font-size:12px;
 	
 	
@@ -6116,7 +6116,7 @@ p.readmore{ text-align: center;}
 {
 	margin:0 15px 0 0; padding:0px;
 	float:left;
-	color:#464749;
+	color:#000;
 	font-size:12px;
 	font-family:Verdana, Geneva, sans-serif;	
 	
@@ -6125,7 +6125,7 @@ p.readmore{ text-align: center;}
 {
 	margin:0px; padding:0px;
 	float:left;
-	color:#464749;
+	color:#000;
 	font-size:12px;
 	font-family:Verdana, Geneva, sans-serif;
 	
@@ -6346,10 +6346,19 @@ p.readmore{ text-align: center;}
 {
 	float:right;
 }
-
-/*top footer end*/
 .t_footer_img
 {
 	text-indent:-99999px;
 	background: url("../images/t_icons/Serprator.png") center center repeat-x;	
 }
+
+/*top footer end*/
+/* black anchor start */
+a.black
+{
+	color:#000;
+	
+	line-height: inherit;
+    text-decoration: none;
+}
+/* black anchor end */
