remove spelling mistakes

--- a/gocart/themes/oneTouch/assets/css/app.css
+++ b/gocart/themes/oneTouch/assets/css/app.css
@@ -1817,7 +1817,7 @@ Alternative dropdown style
 
 .scroll-box::-webkit-scrollbar-thumb {
 
-    background: #57bae8;
+    background: #4D4D4D;
 
 }
 
