--- a/gocart/themes/oneTouch/assets/css/chosen.css
+++ b/gocart/themes/oneTouch/assets/css/chosen.css
@@ -10,6 +10,7 @@ select.chzn-select {
   display: inline-block;
   zoom: 1;
   *display: inline;
+  z-index: 9999;
 }
 .chzn-container .chzn-drop {
   background: #fff;
