--- a/gocart/themes/oneTouch/assets/css/app.css
+++ b/gocart/themes/oneTouch/assets/css/app.css
@@ -5924,8 +5924,8 @@ p.readmore{ text-align: center;}
 .cart
 {
 	
-	overflow:auto;
-	margin:23px 0 0 0; padding:0px;
+	
+
 }
 .cart_text
 {
@@ -5939,7 +5939,7 @@ p.readmore{ text-align: center;}
 .cart_img
 {
 	
-	margin:6px 18px 6px 6px; padding:0px;
+	margin:0px 18px 6px 6px; padding:0px;
 	float:right;
  
 }
@@ -5978,9 +5978,9 @@ p.readmore{ text-align: center;}
 .pages_1:hover .home_h
 {
 	display:block;
-	margin-bottom:5px;
+	margin-bottom:4px;
 }
-.pages_1:hover .page_name
+.pages_1:hover .link-text
 {
 	color:#00F !important;
 	font-family:Verdana, Geneva, sans-serif;
@@ -5998,9 +5998,10 @@ p.readmore{ text-align: center;}
 	display:block;
 	margin-bottom:5px;
 }
-.pages_2:hover .page_name
+.pages_2:hover .link-text
 {
 	color:#00F !important;
+	
 	font-family:Verdana, Geneva, sans-serif;
 	
 	
@@ -6013,9 +6014,9 @@ p.readmore{ text-align: center;}
 .pages_3:hover .blogs_h
 {
 	display:block;
-	margin-bottom:5px;
+	margin-bottom:4px;
 }
-.pages_3:hover .page_name
+.pages_3:hover .link-text
 {
 	color:#00F !important;
 	font-family:Verdana, Geneva, sans-serif;
@@ -6030,9 +6031,9 @@ p.readmore{ text-align: center;}
 .pages_4:hover .tutors_h
 {
 	display:block;
-	margin-bottom:5px;
+	margin-bottom:4px;
 }
-.pages_4:hover .page_name
+.pages_4:hover .link-text
 {
 	color:#00F !important;
 	font-family:Verdana, Geneva, sans-serif;
@@ -6047,9 +6048,9 @@ p.readmore{ text-align: center;}
 .pages_5:hover .faq_h
 {
 	display:block;
-	margin-bottom:5px;
+	margin-bottom:4px;
 }
-.pages_5:hover .page_name
+.pages_5:hover .link-text
 {
 	color:#00F !important;
 	font-family:Verdana, Geneva, sans-serif;
@@ -6064,9 +6065,9 @@ p.readmore{ text-align: center;}
 .pages_6:hover .contect_h
 {
 	display:block;
-	margin-bottom:5px;
+	margin-bottom:4px;
 }
-.pages_6:hover .page_name
+.pages_6:hover .link-text
 {
 	color:#00F !important;
 	font-family:Verdana, Geneva, sans-serif;
@@ -6074,7 +6075,7 @@ p.readmore{ text-align: center;}
 	
 }
 
-.page_name
+.link-text
 {
 	
 	color:#000 !important;
