--- a/gocart/themes/oneTouch/assets/images/app.css
+++ b/gocart/themes/oneTouch/assets/images/app.css
@@ -639,7 +639,7 @@ a.back:hover {
 
 #darkf .widget.widget_facebook_widget {
 
-    background: url("../images/icons/heart_w@2x.png") 0 6px no-repeat;
+    background: url("../images/icons/facebook_icon.png") 0 6px no-repeat;
 
     background-size: 32px 32px;
 
