--- a/gocart/themes/UKOCNewDesign/assets/css/stylesheet.css
+++ b/gocart/themes/UKOCNewDesign/assets/css/stylesheet.css
@@ -1545,7 +1545,7 @@ body {
 			height: 31px;
 			border:0;
 			font-size:11px;
-			color: #fff;
+			color: #808080;
 			}
 			
 		#homeFormCenter input#ajaxButton{
@@ -1555,7 +1555,7 @@ body {
 			height: 31px;
 			border:0;
 			font-size:11px;
-			color: #fff;
+			color: #808080;
 			}
 			
 		#buttonSet{
